Replaced previous images with free images found on Pexels and freepik.
 Changes to be committed:
	deleted:    images/1cause1-image.png
	new file:   images/2873073_7335.jpg
	deleted:    images/2cause2-image.png
	deleted:    images/3cause3-image.png
	deleted:    images/4cause4-image.png
	new file:   images/dna-closely.jpg
	deleted:    images/hero-image1.png
	new file:   images/pexels-nicola-barts-7927581.jpg
	new file:   images/pexels-shvets-production-7203724.jpg
	deleted:    images/raymoo.jpg
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
 
                 <div class="hero-right-content">
-                    <img class="hero-image" src="./images/hero-image.png" alt="A depressed looking person">
+                    <img class="hero-image" src="./images/pexels-nicola-barts-7927581.jpg" alt="A depressed looking person">
                 </div>
             </div>
 
@@ -45,22 +45,22 @@
                 <p class="content-text">4 Leading known causes of Depression</p>
                     <div class="content-items-wrapper">
                         <div class="content-items">
-                            <img src="./images/1cause1-image.png" alt="First source of Depression">
+                            <img src="./images/cause1-image.jpg" alt="First source of Depression">
                             <span>Biological Difference</span>
                         </div>
 
                         <div class="content-items">
-                            <img src="./images/2cause2-image.png" alt="Second source of Depression">
+                            <img src="./images/pexels-shvets-production-7203724.jpg" alt="Second source of Depression">
                             <span>Brain Chemistry</span>
                         </div>
 
                         <div class="content-items">
-                            <img src="./images/3cause3-image.png" alt="Third source of Depression">
+                            <img src="./images/dna-closely.jpg" alt="Third source of Depression">
                             <span>Hormones</span>
                         </div>
                         
                         <div class="content-items">
-                            <img src="./images/4cause4-image.png" alt="Fourth source of Depression">
+                            <img src="./images/2873073_7335.jpg" alt="Fourth source of Depression">
                             <span>Inherited Traits</span>
                         </div>
                     </div>
@@ -79,8 +79,8 @@
             <div class="signup-content-wrapper">
 
                 <div class="signup-left-content">
-                    <div class="signup-text">Call to action! It's time!</div>
-                    <div>Sign up for our product by clicking that button right over there!</div>
+                    <div class="signup-text">Need some help or know someone who needs it?</div>
+                    <div>Sign up for our service by clicking that button right over there!</div>
                 </div>
 
                 <button class="signup-button button">Sign up</button>
