--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Depression Evasion</title>
+        <link rel="icon" type="image/x-icon" href="./images/logo-image.png">
         <link rel="stylesheet" href="index.css">
     </head>
 
     <body>
         <div class="body-wrapper">
             <div class="header">
-                <p class="header-logo-text">
-                    Depression Evasion
-                </p>
+                <div class="header-left-content">
+                    <div class="logo-container">
+                        <img class="header-logo" src="./images/logo-image.png" alt="Amazing Logo">
+                    </div>
+                    <p class="header-logo-text">
+                        Depression Evasion
+                    </p>
+                </div>
                 <ul class="header-links">
                     <li><a href="#">About</a></li>
                     <li><a href="#">Quote</a></li>
@@ -46,22 +52,22 @@
                     <div class="content-items-wrapper">
                         <div class="content-items">
                             <img src="./images/cause1-image.jpg" alt="First source of Depression">
-                            <span>Biological Difference</span>
+                            <p>Biological Difference</p>
                         </div>
 
                         <div class="content-items">
                             <img src="./images/pexels-shvets-production-7203724.jpg" alt="Second source of Depression">
-                            <span>Brain Chemistry</span>
+                            <p>Brain Chemistry</p>
                         </div>
 
                         <div class="content-items">
                             <img src="./images/dna-closely.jpg" alt="Third source of Depression">
-                            <span>Hormones</span>
+                            <p>Hormones</p>
                         </div>
                         
                         <div class="content-items">
                             <img src="./images/2873073_7335.jpg" alt="Fourth source of Depression">
-                            <span>Inherited Traits</span>
+                            <p>Inherited Traits</p>
                         </div>
                     </div>
             </div>
